--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://shareazc.github.io/shareazc/portfolio",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "firebase": "^6.2.0",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
